<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnu_batch_add"
        android:icon="@mipmap/ic_add_square3x"
        android:title=""
        app:showAsAction="ifRoom|collapseActionView"></item>
    <group
        android:checkableBehavior="single"
        app:showAsAction="always">
        <item
            android:id="@+id/mnu_batch_all"
            android:icon="@mipmap/ic_add_square2x"
            android:checked="true"
            android:title="@string/menu_batch_all"
            app:actionViewClass="android.widget.RadioButton"></item>
        <item
            android:id="@+id/mnu_batch_have_activities"
            android:title="@string/menu_batch_have_activities"></item>
        <item
            android:id="@+id/mnu_batch_no_activities"
            android:title="@string/menu_batch_no_activities"></item>
    </group>
</menu>
